charts/elk/elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: elk
  labels:
    app: elasticsearch
spec:
  ports:
  - port: 9200
    name: rest
    targetPort: 9200
  - port: 9300
    name: inter-node
    targetPort: 9300
  selector:
    app: elasticsearch
  type: ClusterIP
