charts/elk/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: elk
  annotations:
    dev.orbstack.http-port: "5601"
  labels:
    app: kibana
spec:
  ports:
  - port: 5601
    name: http
    targetPort: 5601
  selector:
    app: kibana
  type: ClusterIP
